--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
 			<h2 class="heading">Portfolio</h2>
 			<p class="heading-text">
-				It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.<br class="sp-none"> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+				It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.<br> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
       </p>
       
 			<div class="portfolio-group clearfix">
@@ -60,23 +60,23 @@
      <div class="feature">
        <div class="container">
          <h2 class="heading">Feature</h2>
-         <p class="heading-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+         <p class="heading-text">	It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.<br> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
 
          <div class="strength-group clearfix">
            <div class="strength">
             <i class="fab fa-amazon fa-4x"></i>
             <h2 class="strength-title">Strength1</h2>
-            <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+            <p class="strength-text">	It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
            </div>
            <div class="strength">
             <i class="fab fa-apple  fa-4x"></i>
             <h2 class="strength-title">Strength2</h2>
-            <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+            <p class="strength-text">	It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
            </div>
            <div class="strength">
             <i class="fab fa-artstation fa-4x"></i>
             <h2 class="strength-title">Strength3</h2>
-            <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+            <p class="strength-text">	It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
            </div>
          </div>
        </div>
@@ -85,14 +85,14 @@
      <div class="profile">
        <div class="container">
          <h2 class="heading">Profile</h2>
-         <p class="heading-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+         <p class="heading-text">	It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.<br> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
          <div class="profile-group clearfix" >
             <div class="profile-visual">
              <div class="profile-image"></div>
             </div>
             <div class="profile-text-group">
               <h2 class="profile-name">MyName</h2>
-              <p class="profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+              <p class="profile-text">	It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.<br> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
               <h2 class="profile-skill">MySkills</h2>
               <p class="profile-text">Ruby, Javascript, Photoshop</p>
             </div>
@@ -103,7 +103,7 @@
      <div class="contact">
        <div class="container">
          <h2 class="heading">Contact</h2>
-         <p class="heading-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+         <p class="heading-text">	It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.<br> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
          <div class="contact-content clearfix">
             <div class="left-content">
                 <div class="mail-tel-group">
